# terraform-aws-service-scheduler

./: .gitignore  .pre-commit-config.yaml  .releaserc  .terraform.lock.hcl  CHANGELOG.md  CNAME  Makefile  README.md  dynamodb.tf  eventbridge.tf  lambda.tf  locals.tf  mkdocs.yml  outputs.tf  permissions.tf  pyproject.toml  ssm_document.tf  state_machine.tf  variables.tf  versions.tf
.github/workflows/: documentation.yml  pull-request.yml  release.yml
docs/: how-it-works.md  index.md  roadmap.md
docs/usage/: available-tags.md  customization.md  examples.md  installation.md  manual-execution.md  multiple-schedules.md  parameter-store.md  supported-services.md
lambda/: requirements.txt
lambda/src/: handler.py  test.py  tools.py
lambda/src/models/: __init__.py  enums.py  iterator.py  resource.py  schedule.py  service.py  tag.py
lambda/src/services/: __init__.py  _lambda.py  apprunner.py  asg.py  aurora.py  cloudwatch.py  documentdb.py  ec2.py  ecs.py  elasticache.py  neptune.py  rds.py  redshift.py  sagemaker_endpoint.py  sagemaker_notebook.py
lambda/src/tests/: test_global.py  test_handler.py  test_schedule.py  test_schedule_default.py
lambda/src/utils/: tools.py
templates/: main.json  main.tftpl
templates/start/: apprunner.json  apprunner.tftpl  asg.json  asg.tftpl  aurora.json  cloudwatch.json  documentdb.json  documentdb.tftpl  ec2.json  ec2.tftpl  ecs.json  ecs.tftpl  elasticache.json  lambda.json  lambda.tftpl  neptune.json  rds.json  rds.tftpl  redshift.json  sagemaker-endpoint.json  sagemaker-notebook.json
templates/stop/: apprunner.json  apprunner.tftpl  asg.json  asg.tftpl  aurora.json  cloudwatch.json  documentdb.json  documentdb.tftpl  ec2.json  ec2.tftpl  ecs.json  ecs.tftpl  lambda.json  lambda.tftpl  neptune.json  rds.json  rds.tftpl  redshift.json  sagemaker-endpoint.json  sagemaker-notebook.json
