[project]
name = "terraform-aws-service-scheduler"
version = "2.2.0"
description = "AWS Lambda functions for the service scheduler module"
requires-python = ">=3.14"

[tool.ruff]
# Same as Black (industry standard)
line-length = 88
indent-width = 4

# Target Python 3.14 (matching lambda runtime)
target-version = "2.2.0"

# Exclude common directories
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "dist",
    "build",
    ".terraform",
    "node_modules",
]

[tool.ruff.lint]
# Enable comprehensive rule sets for production code
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modern Python idioms)
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez (timezone aware)
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",     # Line too long (handled by formatter)
    "PLR0913",  # Too many arguments to function call
    "PLR2004",  # Magic value used in comparison
    # Style suggestions (not errors) - optional improvements
    "N802",     # Function name should be lowercase (ServiceFactory is intentional)
    "ARG001",   # Unused function argument (Lambda context is required by AWS)
    "SIM102",   # Nested if statements (sometimes clearer than complex conditions)
    "PLW1641",  # Missing __hash__ method (not needed for this use case)
    "PLW2901",  # Loop variable overwritten (intentional in range checking)
    "PLC0415",  # Import not at top-level (circular import avoidance)
    "B904",     # Exception chaining (legacy code compatibility)
]

# Allow fix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
# Use a single line for each import
force-single-line = false
# Group imports by type
force-sort-within-sections = true
# Known first-party modules
known-first-party = ["services", "models", "utils"]

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values and print statements
"tests/*" = ["PLR2004", "T20"]

[tool.ruff.format]
# Use double quotes for strings (Python convention)
quote-style = "double"

# Use spaces for indentation
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Automatically detect line endings
line-ending = "auto"

# Format code examples in docstrings
docstring-code-format = true
docstring-code-line-length = "dynamic"
